--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <div class="container nav_container">
-        <ul class="nav_items">
+        <ul class="nav_items" id="nav_item " >
           <li><a href="index.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Testimonials</a></li>
@@ -454,7 +454,13 @@
             <li><a href="index.html">Customer Support</a></li>
           </ul>
         </div>
+
       </div>
+      <div class="footer_socials"><a href=""> <i class="fa fa-facebook"></i></a>
+      <a href=""><i class="fa fa-twitter"></i></a>
+      <a href=""><i class="fa fa-instagram"></i></a>
+      <a href=""><i class="fa fa-linkedin"></i> </a></div>
     </footer>
+    <script src="./first.js"></script>
   </body>
 </html>
