--- a/html/Home.html
+++ b/html/Home.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <div class="container nav_container">
-        <ul class="nav_items" id="nav_item " >
+        <ul class="nav_items" id="nav_item ">
           <li><a href="index.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Testimonials</a></li>
@@ -372,7 +372,11 @@
             </a>
             <a href="#" class="btn btn-primary" target="_blank">
               <div class="logo">
-                <img src="./assets//google playstore.png" alt="" class="and-logo" />
+                <img
+                  src="./assets//google playstore.png"
+                  alt=""
+                  class="and-logo"
+                />
               </div>
 
               <span
@@ -454,12 +458,13 @@
             <li><a href="index.html">Customer Support</a></li>
           </ul>
         </div>
-
       </div>
-      <div class="footer_socials"><a href=""> <i class="fa fa-facebook"></i></a>
-      <a href=""><i class="fa fa-twitter"></i></a>
-      <a href=""><i class="fa fa-instagram"></i></a>
-      <a href=""><i class="fa fa-linkedin"></i> </a></div>
+      <div class="footer_socials">
+        <a href=""> <i class="fa fa-facebook"></i></a>
+        <a href=""><i class="fa fa-twitter"></i></a>
+        <a href=""><i class="fa fa-instagram"></i></a>
+        <a href=""><i class="fa fa-linkedin"></i> </a>
+      </div>
     </footer>
     <script src="./first.js"></script>
   </body>
